# arango_taxii_server

./: .env.example  .env.markdown  .gitignore  .gitmodules  Dockerfile  README.md  create_indexes_for_existing_db.py  docker-compose.yml  manage.py  pyproject.toml  requirements.in  requirements.txt  requirements_dev.txt
.github/workflows/: run-tests.yml  schemathesis_test.yml
arango_taxii_server/: __init__.py  asgi.py  celery.py  conf.py  settings.py  urls.py  wsgi.py
arango_taxii_server/app/: apps.py  arango_helper.py  authentication.py  models.py  open_api_schemas.py  schema_views.py  serializers.py  settings.py  task_helpers.py  urls.py  utils.py  views.py
docs/: README.md
tests/: README.md  base_test.py  conftest.py  create_accounts_and_databases.py  create_required_users.py  requirements.txt  sample_stix_objects.json  settings.py  setup_arango.py  test_0-no-authentication.py  test_0-no_access_user.py  test_0-unauthenticated_requests.py  test_01_discovery.py  test_02_api_roots.py  test_03_collections.py  test_04_collection.py  test_05_manifest.py  test_06_objects.py  test_07_object.py  test_0_bad_credentials.py  test_0_bad_credentials_all_endpoints.py  test_0_unautorised_requests.py  test_1-no_access_user.py  test_1_unauthorised_requests.py  test_1_unauthorised_requests_all_endpoints.py  test_2_no_access_user.py  test_2_no_access_user_all_endpoints.py  test_2_read_user.py  test_3_read_user.py  test_3_read_user_all_endpoints.py  test_4_read_write_user.py  test_4_read_write_user_adding_delete_object.py  test_4_read_write_user_read_requests.py  test_5_checking_parameters_get_manifest.py  test_6_checking_parameters_get_objects.py  test_variables.py  test_variables_old.py  tests.env  upload_bundles.py  utils.py
tests/bundles/: bundle1.json  bundle2.json  bundle3.json  bundle_versions.py  make_bundles.py
tests/full/: conftest.py  test_01_discovery.py  test_02_api_roots.py  test_03_collections.py  test_04_collection.py  test_05_manifest.py  test_06_objects.py  test_07_object.py  test_functions.py  test_settings.py  utils.py
tests/st/: .env.schemathesis  links.py  test_schemathesis.py
(+6 files in other folders)
